# modml-solver

./: .gitignore  modml-solver.cabal
ModML/Solver/: BasicDAESolver.hs  CSVSolver.hs  ModelTransformations.hs
csv-autosolver/: Main.hs
other-projects/: build-all.sh
other-projects/sundials-2.4.0/: .gitignore
solver-support/: SolverHead.h
test-models/: test-core.hs  test-units  test-units.hs
