name:                 ModML-Solver
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             Solvers for ModML models
description:          Solvers for ModML models

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.Solver.BasicDAESolver
  build-depends: base ==4.*,
                 process ==1.0.*,
                 unix == 2.4.*,
                 filepath == 1.1.*,
                 parsec == 3.*,
                 mtl == 1.1.*,
                 typehash == 1.*,
                 syb == 0.1.*,
                 random == 1.*,
                 containers == 0.3.*,
                 ModML-Core == 0.0.*

executable csv-autosolver
  hs-source-dirs: csv-autosolver
  Main-Is: Main.hs
  build-depends: base == 4.*,
                 parsec == 3.*,
                 filepath == 1.1.*,
                 directory == 1.0.*,
                 process == 1.0.*,
                 cmdargs == 0.1.*
