name:                 ModML-Solver
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             Solvers for ModML models
description:          Solvers for ModML models
Data-Files: solver-support/SolverHead.h

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.Solver.BasicDAESolver
    ModML.Solver.CSVSolver
  build-depends: base ==4.*,
                 process ==1.*,
                 unix == 2.4.*,
                 filepath == 1.*,
                 parsec == 3.*,
                 mtl >= 1 && < 3,
                 typehash == 1.*,
                 syb >= 0.1 && < 0.3,
                 random == 1.*,
                 containers >= 0.3 && < 0.5,
                 ModML-Core == 0.0.*
  Other-Modules: Paths_ModML_Solver

executable csv-autosolver
  hs-source-dirs: csv-autosolver
  Main-Is: Main.hs
  build-depends: base == 4.*,
                 parsec == 3.*,
                 filepath == 1.*,
                 MissingH == 1.*,
                 directory == 1.*,
                 process == 1.*,
                 cmdargs >= 0.4 && < 0.7
                 -- dequeue == 0.1.*,
                 -- ghc >= 6.8 && < 8,
                 -- ghc-paths == 0.1.*,
